# sequentia-explorer

./: .gitignore  LICENSE  PORTING.md  README.md  build-public.sh  env.sh  run-electrs-supervised.sh  run-electrs-testnet4.sh  run-sequentia-explorer.sh  run-testnet4-explorer.sh  serve-public.js
anchor-decode-check/: Cargo.toml  block0.hex  block0_txs.txt  block1.hex  block1_txs.txt  expected_anchor.txt  expected_blockhash.txt  header.hex
anchor-decode-check/src/: main.rs
deploy/: README.md
deploy/systemd/: concatena-electrs-seq.service  concatena-electrs-t4.service  concatena-explorer.service
downloads/: index.html
electrs/: Cargo.toml
electrs/src/: chain.rs  config.rs  daemon.rs  rest.rs
electrs/src/elements/: asset.rs
electrs/src/new_index/: mempool.rs  query.rs
electrs/src/util/: transaction.rs
esplora/: API.md  README.md  dev-server.js
esplora/client/: index.pug
esplora/client/src/: app.js
esplora/client/src/views/: asset-list.js  asset.js  block.js  mempool.js  navbar.js  network-selection.js  transactions.js  tx-vin.js  tx-vout.js  tx.js  util.js
esplora/flavors/sequentia-testnet/: config.env  extras.css
esplora/www/: style.css
esplora/www/_data/: assets.minimal.json
rust-elements/: Cargo.toml
rust-elements/src/: address.rs  block.rs  transaction.rs
rust-elements/src/pset/map/: input.rs
